section:5, process:write,figures,code

--- a/references.bib
+++ b/references.bib
@@ -733,6 +733,16 @@
     url = {https://www.r-project.org/doc/Rnews/Rnews_2006-1.pdf}
   }
 
+@Article{Csardi_et_al_2006,
+    title = {The igraph software package for complex network research},
+    author = {Cs{\'a}rdi, G. and Nepusz, T.},
+    journal = {InterJournal},
+    volume = {Complex Systems},
+    pages = {1695},
+    year = {2006},
+    url = {https://igraph.org},
+  }
+  
 @article{Nicholas_et_al_2007,
 	author = {Nicholas, J. and Geers, A.},
 	journal = {Journal of speech, language, and hearing research},
@@ -1578,7 +1588,7 @@
 
 @article{Burkner_2017,
   title = {{brms}: An {R} Package for {Bayesian} Multilevel Models Using {Stan}},
-  author = {Paul-Christian Bürkner},
+  author = {Paul-Christian B{\"u}rkner},
   journal = {Journal of Statistical Software},
   year = {2017},
   volume = {80},
@@ -1589,7 +1599,7 @@
 
 @Article{Burkner_2018,
   title = {Advanced {Bayesian} Multilevel Modeling with the {R} Package {brms}},
-  author = {Paul-Christian Bürkner},
+  author = {Paul-Christian B{\"u}rkner},
   journal = {The R Journal},
   year = {2018},
   volume = {10},
@@ -1672,6 +1682,17 @@
     url={}
 }
     
+@article{Gabry_et_al_2019,
+  title = {Visualization in Bayesian workflow},
+  author = {Jonah Gabry and Daniel Simpson and Aki Vehtari and Michael Betancourt and Andrew Gelman},
+  year = {2019},
+  journal = {J. R. Stat. Soc. A},
+  volume = {182},
+  issue = {2},
+  pages = {389-402},
+  doi = {10.1111/rssa.12378}
+}
+
 @article{Jones_et_al_2019,
     author = {Jones, I. and Bisson, M. and Gilmore, C. and Inglis, M.},
     journal = {British Educational Research Journal},
@@ -1757,7 +1778,7 @@
 	url = {}
 }
 
-@article{tidyverse_2019,
+@article{Wickham_et_al_2019,
     title = {Welcome to the {tidyverse}},
     author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
     year = {2019},
@@ -1962,7 +1983,7 @@
     url = {}
 }
 
-@article{Vehtari_et_al_2021,
+@article{Vehtari_et_al_2021a,
     author = {Vehtari, A. and Gelman, A. and Simpson, D. and Carpenter, B and B{\"u}rkner, PC.},
     title = {{Rank-Normalization, Folding, and Localization: An Improved $\widehat{R}$ for Assessing Convergence of MCMC (with Discussion)}},
     volume = {16},
@@ -3365,14 +3386,6 @@ responses?},
 	url = {https://www.edx.org/course/causal-diagrams-draw-your-assumptions-before-your}
 }
 
-@misc{RStan_2020,
-	title = {{RStan}: the {R} interface to {Stan}},
-	author = {{Stan Development Team}},
-	note = {R package version 2.21.2},
-	year = {2020},
-	url = {http://mc-stan.org/}
-}
-
 @misc{Gelman_et_al_2020,
     title={Bayesian Workflow},
     author={Andrew Gelman and Aki Vehtari and Daniel Simpson and Charles C. Margossian and Bob Carpenter and Yuling Yao and Lauren Kennedy and Jonah Gabry and Paul-Christian Bürkner and Martin Modrák},
@@ -3399,13 +3412,6 @@ responses?},
     howpublished = "\url{https://www.youtube.com/watch?v=KNPYUVmY3NM}",
     year = {2021},
     note = {Last accessed 30 April 2024},
-}
-
-@misc{PSIS_2021,
-	title = {Pareto Smoothed Importance Sampling}, 
-	author = {Vehtari, A and Simpson, D. and Gelman, A. and Yao, Y. and Gabry, J.},
-	year = {2021},
-	url = {https://arxiv.org/abs/1507.02646}
 }
 
 @misc{Hanck_et_al_2021,
@@ -3455,13 +3461,20 @@ responses?},
 	url = {https://github.com/rmcelreath/stat\_rethinking\_2023}
 }
 
-@misc{loo_2023,
+@misc{Vehtari_et_al_2024a,
+	title = {Pareto Smoothed Importance Sampling}, 
+	author = {Vehtari, A and Simpson, D. and Gelman, A. and Yao, Y. and Gabry, J.},
+	year = {2024},
+	url = {https://arxiv.org/abs/1507.02646}
+}
+
+@misc{Vehtari_et_al_2024b,
     title = {loo: Efficient leave-one-out cross-validation and WAIC for Bayesian models},
     author = {Vehtari, A. and Gabry, J. and Magnusson, M. and Yao, Y. and B{\"u}rkner, P. and Paananen, T. and Gelman, A.},
-    year = {2023},
-    note = {R package version 2.6.0},
+    year = {2024},
+    note = {R package version 2.8.0},
     url = {https://mc-stan.org/loo/}
-  }
+}
 
 @misc{McElreath_2024a,
 	author = {McElreath, R.},
@@ -3478,6 +3491,30 @@ responses?},
     note = {Retrieved July 23, 2024},
     url = {https://www.merriam-webster.com/dictionary/hacker}
   }
+  
+@misc{Burkner_et_al_2024,
+  title = {posterior: Tools for Working with Posterior Distributions},
+  author = {Paul-Christian B{\" u}rkner and Jonah Gabry and Matthew Kay and Aki Vehtari},
+  year = {2024},
+  note = {R package version 1.6.0},
+  url = {https://mc-stan.org/posterior/},
+}
+
+@misc{RStan_2025,
+	title = {{RStan}: the {R} interface to {Stan}},
+	author = {{Stan Development Team}},
+	note = {R package version 2.32.7},
+	year = {2025},
+	url = {http://mc-stan.org/}
+}
+
+@misc{Gabry_et_al_2025,
+  title = {bayesplot: Plotting for Bayesian Models},
+  author = {Jonah Gabry and Tristan Mahr},
+  year = {2025},
+  note = {R package version 1.14.0},
+  url = {https://mc-stan.org/bayesplot/},
+}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -3524,7 +3561,7 @@ responses?},
     note = {R package version 2.21},
 }
 
-@manual{RColorBrewer_2022,
+@manual{Neuwirth_2022,
     title = {RColorBrewer: ColorBrewer Palettes},
     author = {Neuwirth, E.},
     year = {2022},
@@ -3532,7 +3569,7 @@ responses?},
     url = {https://CRAN.R-project.org/package=RColorBrewer}
 }
 
-@manual{stringr_2022,
+@manual{Wickham_2022,
     title = {stringr: Simple, Consistent Wrappers for Common String Operations},
     author = {Wickham, H.},
     year = {2022},
@@ -3547,13 +3584,6 @@ responses?},
     note = {Last accessed in april 2024},
     url = {https://www.jirka.org/ra/html/frontmatter-1.html}
 }
-
-@manual{cmdstanr_2022,
-    title = {cmdstanr: R Interface to 'CmdStan'},
-    author = {Gabry, J. and {\u C}e{\u s}novar, R.},
-    year = {2022},
-    url = {https://mc-stan.org/cmdstanr/, https://discourse.mc-stan.org}
-  }
 
 @manual{dplyr_2023,
     title = {dplyr: A Grammar of Data Manipulation},
@@ -3580,6 +3610,24 @@ responses?},
     url = {https://haozhu233.github.io/kableExtra/},
   }
   
+@manual{Gabry_et_al_2025,
+    title = {cmdstanr: R Interface to 'CmdStan'},
+    author = {Gabry, J. and {\u C}e{\u s}novar, R. and Johnson, A. and Bronder, S.},
+    year = {2025},
+    url = {https://mc-stan.org/cmdstanr/}
+  }
+  
+@Manual{Csardi_et_al_2025,
+    title = {{igraph}: Network Analysis and Visualization in R},
+    author = {G{\'a}bor Cs{\'a}rdi and Tam{\'a}s Nepusz and Vincent Traag and
+      Szabolcs Horv{\'a}t and Fabio Zanini and Daniel Noom and Kirill
+      M{\"u}ller},
+    year = {2025},
+    note = {R package version 2.1.4},
+    doi = {10.5281/zenodo.7682609},
+    url = {https://CRAN.R-project.org/package=igraph},
+  }
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @techreport{deHaan_et_al_2019,
