--- a/presentation.qmd
+++ b/presentation.qmd
@@ -146,6 +146,8 @@ CJ data can be analyzed under two analytical approaches:
 
 <!-- ######################################### -->
 
+# 3.1 The classical BTL analysis
+
 ---
 
 ## 3.1 The classical BTL analysis {#sec-BTL style="font-size:80%;"}
@@ -188,9 +190,11 @@ This approach applies several sequential methods, each with different purposes [
 
 <!-- ######################################### -->
 
+# 3.2 The Information-Theoretical model for CJ
+
 --- 
 
-## 3.2 The Information-Theoretical model for CJ {style="font-size:80%;"}
+## 3.2 The Information-Theoretical model for CJ {#sec-ITCJ style="font-size:80%;"}
 
 In contrast, this approach applies one systematic, integrated approach to estimate traits and conduct inferences [@Rivera_et_al_2025]. In broad terms, the approach:
 
@@ -420,6 +424,8 @@ c. Simulate a _synthetic conceptual population_ that reflects the defined struct
 
 <!-- ######################################### -->
 
+# 4.1 From Theory to Design: Steps 1a-1c
+
 ---
 
 ## 4.1 From Theory to Design: Steps 1a-1c {style="font-size:80%;"}
@@ -589,9 +595,9 @@ In layman terms:
 ::: incremental 
 ::: {style="font-size:60%;"}
 - No stimuli characteristics $(X_{IA})$,
-- Individual characteristics $(X_{I})$ include a continuous variable $(X_{Ic})$ for the age of children, and a categorical variable with three levels representing individual groups: normal-hearing (NH, $X_{Id}[g=1]$), hearing-impaired with hearing aids (HI-HA, $X_{Id}[g=2]$), and hearing-impaired with cochlear implants (HI-CI, $X_{Id}[g=3]$) children;
-- There is a "small" [@Cohen_1988; @Sawilowsky_2009] but increasing effect of the continuous variable $(\beta_{XIc})$ on the mean latent trait of individuals;
-- There are "very large" [@Cohen_1988; @Sawilowsky_2009] differences in the mean latent trait across individual groups $(\beta_{XId[g=1]} > \beta_{XId[g=2]} > \beta_{XId[g=3]})$;
+- Individual characteristics $(X_{I})$ include a continuous variable $(X_{Ic})$ for the age of children, and a categorical variable with three levels representing hearing status groups: normal-hearing (NH, $X_{Id}[g=1]$), hearing-impaired with hearing aids (HI-HA, $X_{Id}[g=2]$), and hearing-impaired with cochlear implants (HI-CI, $X_{Id}[g=3]$) children;
+- There is a "small" [@Cohen_1988; @Sawilowsky_2009] but increasing effect of age $(\beta_{XIc})$ on the mean latent trait of individuals;
+- There are "very large" [@Cohen_1988; @Sawilowsky_2009] differences in the mean latent trait across hearing status groups $(\beta_{XId[g=1]} > \beta_{XId[g=2]} > \beta_{XId[g=3]})$;
 - Judges make only one comparison; thus, there are no judgment-level characteristics $(Z_{JK})$, judgement-level effects $(\beta_{ZJK})$, or residual judgment variability $(p_{JK})$;
 - Judges characteristics $(Z_{J})$ include a categorical variable with three levels representing judge groups: audiologist (AU, $Z_{Jd}[g=1]$), primary teachers (PT, $Z_{Jd}[g=2]$), and inexperienced listeners (IL, $Z_{Jd}[g=3]$);
 - Judges exhibit biases, but mean latent biases across judge groups are equal to zero $(\beta_{ZJd[g=1]}=\beta_{ZJd[g=2]}=\beta_{ZJd[g=3]}=0)$;
@@ -622,6 +628,8 @@ More importantly, the simulation parameters define the **_estimands_** of intere
 
 <!-- ######################################### -->
 
+# 4.2 From Design to Sample: Step 2
+
 ---
 
 ## 4.2 From Design to Sample: Step 2 {style="font-size:80%;"}
@@ -633,11 +641,11 @@ More specifically, for the sampling $(S)$ and comparison $(C)$ mechanisms shown 
 
 ::: incremental 
 ::: {style="font-size:80%;"}
-- A sample of $54$ individuals, divided into three groups: $40$ NH $(X_{Id}[g=1])$, $7$ HI-HA $(X_{Id}[g=2])$, and $7$ HI-CI $(X_{Id}[g=3])$ children;
+- A sample of $54$ individuals, divided into three hearing status groups: $40$ NH $(X_{Id}[g=1])$, $7$ HI-HA $(X_{Id}[g=2])$, and $7$ HI-CI $(X_{Id}[g=3])$ children;
 - A sample of $10$ stimuli per individual;
 - A sample of $60$ judges, divided into three groups: $10$ AU $(Z_{Jd}[g=1])$, $10$ PT $(Z_{Jd}[g=2])$, and $40$ IL $(Z_{Jd}[g=3])$;
 - Judges conduct only one-comparison of the same stimulus pair (i.e., design is NOT a *repeated measures design* [@Lawson_2015, chap. 9.5])
-- Each stimulus is compared 20 times in total against other stimuli, across all judges.
+- Each stimulus is compared $20$ times in total against other stimuli, across all judges.
 :::
 :::
 
@@ -669,6 +677,8 @@ Judges's sample size calculation, considering requirements for Confidence, Effic
 
 <!-- ######################################### -->
 
+# 4.3 From Estimator and Sample to Estimate(s): The software of step 5
+
 ---
 
 ## 4.3 From Estimator and Sample to Estimate(s): The software of step 5 {style="font-size:80%;"}
@@ -677,22 +687,20 @@ All analysis were conducted using `R` version 4.2.2 [@R_2015]. Specifically:
 
 ::: incremental 
 ::: {style="font-size:80%;"}
-1. For the **classical BTL analysis** described in @sec-BTL [@Pollitt_2012a; @Pollitt_2012b], the study uses:
+1. For the **classical BTL analysis** [@Pollitt_2012a; @Pollitt_2012b] described in @sec-BTL , the study uses:
     
 ::: incremental 
 ::: {style="font-size:80%;"}
-a. The `BradleyTerry2` package [@Turner_et_al_2012a; @Turner_et_al_2012b] and its `BTm()` function to fit the BTL model to the data, and estimate both the stimuli traits and model residuals.
-b. The `brms` package [@Burkner_2017; @Burkner_2018] and `Stan` version 2.26.1 [@Stan_2020] to fit two separate Bayesian multilevel regression models: one for the stimuli mean traits and another for the model residuals. 
-c. Additional `R` packages to generate summaries and predictions from the data and fitted models, such as [ADD]{style="color:red;"}
+- The `BradleyTerry2` package [@Turner_et_al_2012a; @Turner_et_al_2012b] and its `BTm()` function to fit the BTL model to the data, and estimate both the stimuli traits and model residuals.
+- `Stan` version 2.26.1 [@Stan_2020] and the `brms` package [@Burkner_2017; @Burkner_2018] to fit two separate Bayesian multilevel regression models: one for the stimuli mean traits and another for the model residuals. 
 :::
 :::
 
-2. For the **Information-Theoretical model for CJ** [@Rivera_et_al_2025], the study uses:
+2. For the **Information-Theoretical model for CJ** described in @sec-ITCJ [@Rivera_et_al_2025], the study uses:
 
 ::: incremental 
 ::: {style="font-size:80%;"}
-a. `Stan` version 2.26.1 [@Stan_2020] to fit a series of increasingly complex Bayesian Information-Theoretical CJ models,
-b. Additional `R` packages to generate summaries and predictions from the data and fitted models, such as [ADD]{style="color:red;"}
+- `Stan` version 2.26.1 [@Stan_2020] to fit a series of increasingly complex Bayesian Information-Theoretical CJ models,
 :::
 :::
 
@@ -703,7 +711,29 @@ b. Additional `R` packages to generate summaries and predictions from the data a
 Notably, **for each Bayesian model**, four Markov chains of $4000$ iterations were run, each with distinct starting values. The first $2000$ iterations served as warm-up, and the remaining $2000$ were used as posterior samples.
 :::
 
+---
+
+## 4.3 From Estimator and Sample to Estimate(s): The software of step 5 {style="font-size:80%;"}
+
+All analysis were conducted using `R` version 4.2.2 [@R_2015]. Specifically:
+
+::: incremental 
+::: {style="font-size:80%;"}
+3. A set of additional `R` packages was used for:
+
+::: incremental 
+::: {style="font-size:80%;"}
+- **Data manipulation and visualization:** `tidyverse` [@Wickham_et_al_2019], `igraph` [@Csardi_et_al_2006; @Csardi_et_al_2025], and `RColorBrewer` [@Neuwirth_2022];
+- **Model summaries, predictions, and diagnostics:** `cmdstanr` [@Gabry_et_al_2025], `rstan` [@RStan_2025], `loo` [@Vehtari_et_al_2024b], `posterior` [@Burkner_et_al_2024], and `bayesplot` [@Gabry_et_al_2019; @Gabry_et_al_2025].
+:::
+:::
+
+:::
+:::
+
 <!-- ######################################### -->
+
+# 4.4 From Estimate(s) to Diagnostics and Post predictive: The evaluation criteria for step 6
 
 ---
 
@@ -718,7 +748,7 @@ The study assess the quality of the models and estimate(s) in terms of:
 ::: incremental 
 ::: {style="font-size:80%;"}
 - Graphical analyses, including trace plots, rank-normalized trace plots, autocorrelation function (ACF) plots, and comparison plot of prior to posterior distributions,
-- Diagnostic statistics, including the potential scale reduction factor statistics $(\hat{R})$ with a cut-off value of $1.05$ [@Vehtari_et_al_2021] and effective sample size statistics $(n_{\text{eff}})$ [@Gelman_et_al_2014].
+- Diagnostic statistics, including the potential scale reduction factor statistics $(\hat{R})$ with a cut-off value of $1.05$ [@Vehtari_et_al_2021a] and effective sample size statistics $(n_{\text{eff}})$ [@Gelman_et_al_2014].
 :::
 :::
 
@@ -765,7 +795,7 @@ The study assess the quality of the models and estimate(s) in terms of:
 ::: incremental 
 ::: {style="font-size:80%;"}
 - The widely applicable information criterion $(\text{WAIC})$ [@Watanabe_2013] and its standard error $(\text{SE}_{W})$, along with the differences in $\text{WAIC}$ between models $(\text{dWAIC} \pm 1 \cdot \text{dSE}_{W})$
-- The Pareto Smoothing Importance Sampling criterion $(\text{PSIS})$ [@Vehtari_et_al_2017] and its standard error $(\text{SE}_{P})$, along with the differences in $\text{PSIS}$ between models $(\text{dPSIS} \pm 1 \cdot \text{dSE}_{P})$
+- The Pareto Smoothing Importance Sampling criterion $(\text{PSIS})$ [@Vehtari_et_al_2017; @Vehtari_et_al_2024a] and its standard error $(\text{SE}_{P})$, along with the differences in $\text{PSIS}$ between models $(\text{dPSIS} \pm 1 \cdot \text{dSE}_{P})$
 :::
 :::
 
@@ -773,8 +803,8 @@ The study assess the quality of the models and estimate(s) in terms of:
 
 ::: incremental 
 ::: {style="font-size:80%;"}
-- Confusion matrix comparing expected posterior predictions $E( \boldsymbol{\hat{y}_{s}})$ with observed outcomes $\boldsymbol{y}$ from the **_first_** synthetic dataset, both non-aggregated and aggregated at the levels of stimuli, individuals, and judges,
-- Confusion matrix comparing the posterior predictions $\hat{y}_{s}$ with observed outcomes  $\boldsymbol{y}$ from the **_first_** synthetic dataset, both non-aggregated and aggregated at the levels of stimuli, individuals, and judges,
+- Confusion matrix comparing expected posterior predictions $E( \boldsymbol{\hat{y}})$ with observed outcomes $\boldsymbol{y}$ from the **_first_** synthetic dataset, both non-aggregated and aggregated at the levels of stimuli, individuals, and judges,
+- Confusion matrix comparing the posterior predictions $\boldsymbol{\hat{y}}_{s}$ with observed outcomes  $\boldsymbol{y}$ from the **_first_** synthetic dataset, both non-aggregated and aggregated at the levels of stimuli, individuals, and judges,
 :::
 :::
 
@@ -793,8 +823,8 @@ The study assess the quality of the models and estimate(s) in terms of:
 
 ::: incremental 
 ::: {style="font-size:80%;"}
-- Confusion matrix comparing expected posterior predictions $E( \boldsymbol{\hat{y}_{s}})$ with observed outcomes $\boldsymbol{y}$ from the **_second_** synthetic dataset, both non-aggregated and aggregated at the levels of stimuli, individuals, and judges,
-- Confusion matrix comparing the posterior predictions $\hat{y}_{s}$ with observed outcomes  $\boldsymbol{y}$ from the **_second_** synthetic dataset, both non-aggregated and aggregated at the levels of stimuli, individuals, and judges,
+- Confusion matrix comparing expected posterior predictions $E( \boldsymbol{\hat{y}})$ with observed outcomes $\boldsymbol{y}$ from the **_second_** synthetic dataset, both non-aggregated and aggregated at the levels of stimuli, individuals, and judges,
+- Confusion matrix comparing the posterior predictions $\boldsymbol{\hat{y}}_{s}$ with observed outcomes  $\boldsymbol{y}$ from the **_second_** synthetic dataset, both non-aggregated and aggregated at the levels of stimuli, individuals, and judges,
 :::
 :::
 
@@ -823,9 +853,15 @@ In this section, the study will:
 
 :::
 
+<!-- ######################################### -->
+
+# 5.1 The first synthetic comparison dataset
+
+# 5.1.1 Data description
+
 ---
 
-## 5.1 The first synthetic comparison dataset {style="font-size:80%;"}
+## 5.1.1 Data description {style="font-size:80%;"}
 
 In terms of design, the dataset reveals that:
 
@@ -848,7 +884,7 @@ Comparison design. *Left panel* shows the number of comparisons for individuals 
 
 ---
 
-## 5.1 The first synthetic comparison dataset {style="font-size:80%;"}
+## 5.1.1 Data description {style="font-size:80%;"}
 
 In a similar manner, the data indicates:
 
@@ -872,14 +908,14 @@ Comparison design. *Left panel* shows the number of comparisons for individuals.
 
 ---
 
-## 5.1 The first synthetic comparison dataset {style="font-size:80%;"}
+## 5.1.1 Data description {style="font-size:80%;"}
 
 On the other hand, the dataset shows:
 
 ::: incremental 
 ::: {style="font-size:80%;"}
-- Judges compare individuals with varying frequency, ranging from $0$ to $13$ comparisons;
-- Most judges complete $262$ comparisons, while some $264$ due to random design variation;
+- Judges compare individuals with frequencies ranging from $0$ to $13$ comparisons;
+- Most judges completed $262$ comparisons, while a few completed $264$ due to random design variation.
 :::
 :::
 
@@ -893,12 +929,9 @@ Comparison design. *Left panel* shows the judges $(Js)$ vs the first $10$ indivi
 :::
 :::
 
-
-
-
 ---
 
-## 5.1 The first synthetic comparison dataset {style="font-size:80%;"}
+## 5.1.1 Data description {style="font-size:80%;"}
 
 Moreover,
 
@@ -916,42 +949,150 @@ Bipartite graph of judges to individual comparison network.
 :::
 :::
 
+---
 
-<!-- ######################################### -->
+## 5.1.1 Data description {style="font-size:80%;"}
+
+In terms of the outcomes, we see some stimuli with higher win rates than others:
+
+::: {.fragment style="font-size:80%;"}
+::: {#fig-stimuli_wins}
+![](/images/stimuli_wins.png){width=70%}
+
+Stimuli win rates.
+:::
+:::
 
 ---
 
-## 5.2 The classical BTL analysis {style="font-size:80%;"}
+## 5.1.1 Data description {style="font-size:80%;"}
+
+Aggregated by individuals, we see some individuals with higher win rates than others:
+
+::: {.fragment style="font-size:80%;"}
+::: {#fig-stimuli_wins}
+![](/images/individual_wins.png){width=70%}
+
+Individual win rates.
+:::
+:::
+
+---
+
+## 5.1.1 Data description {style="font-size:80%;"}
+
+Divided by hearing status groups, 
+
+::: incremental 
+::: {style="font-size:80%;"}
+- It is harder to see average differences between the groups,
+- However, we can easily notice the different variability between them
+:::
+:::
+
+::: {.fragment style="font-size:80%;"}
+::: {#fig-stimuli_wins}
+![](/images/individual_wins_groups.png){width=100%}
+
+Individual win rates per group. *Left panel* for NH children. *Middle panel* for HI-HA children. *Right panel* for HI-CI children.
+:::
+:::
+
+---
+
+## 5.1.1 Data description {style="font-size:80%;"}
+
+Considering age, no apparent relationship transpire between wins and age:
+
+::: {.fragment style="font-size:80%;"}
+::: {#fig-stimuli_wins}
+![](/images/individual_winsVSXIc.png){width=70%}
+
+Individual win rates versus age.
+:::
+:::
+
+
+---
+
+## 5.1.1 Data description {style="font-size:80%;"}
+
+Considering the interaction of age and hearing status groups, 
+
+::: incremental 
+::: {style="font-size:80%;"}
+- We notice a slightly decreasing trend in HI-HA and HI-CI children,
+- This indicates that, in those groups, older children are less likely to win in a comparison.
+:::
+:::
+
+::: {.fragment style="font-size:80%;"}
+::: {#fig-stimuli_wins}
+![](/images/individual_winsVSXIc_groups.png){width=100%}
+
+Individual win rates.
+:::
+:::
+
+<!-- ######################################### -->
+
+# 5.1.2 Data modeling
+
+---
+
+## 5.1.2 Data modeling {style="font-size:80%;"}
+
+<!-- ######################################### -->
+
+# 5.1.2.1 The classical BTL analysis
+
+---
+
+## 5.1.2.1 The classical BTL analysis {style="font-size:80%;"}
 
 This approach applies several sequential methods, each with different purposes [@Pollitt_2012a; @Pollitt_2012b; @Jones_et_al_2019; @Boonen_et_al_2020; @Chambers_et_al_2022; @Bouwer_et_al_2023]:
 
 <!-- ######################################### -->
 
+# 5.1.2.2 The Information-Theoretical model for CJ 
+
 ---
 
-## 5.3 The Information-Theoretical model for CJ {style="font-size:80%;"}
+## 5.1.2.2 The Information-Theoretical model for CJ {style="font-size:80%;"}
 
 <!-- ######################################### -->
 
+# 5.2 The second synthetic comparison dataset
+
+# 5.2.1 Data description
+
 ---
 
-## 5.2 From Estimands and Estimator to Effects and Predictions: Steps 8 and 9 {style="font-size:80%;"}
-
----
-
-## 5.2.1 The second synthetic comparison dataset {style="font-size:80%;"}
+## 5.2.1 Data description {style="font-size:80%;"}
 
 <!-- ######################################### -->
 
+# 5.2.2 From Estimands and Estimator to Effects and Predictions: Steps 8 and 9
+
 ---
 
-## 5.2.2 The classical BTL analysis {style="font-size:80%;"}
+## 5.2.2 From Estimands and Estimator to Effects and Predictions: Steps 8 and 9 {style="font-size:80%;"}
 
 <!-- ######################################### -->
 
+# 5.2.2.1 The classical BTL analysis
+
 ---
 
-## 5.2.3 The Information-Theoretical model for CJ {style="font-size:80%;"}
+## 5.2.2.1 The classical BTL analysis {style="font-size:80%;"}
+
+<!-- ######################################### -->
+
+# 5.2.2.2 The Information-Theoretical model for CJ
+
+---
+
+## 5.2.2.2 The Information-Theoretical model for CJ {style="font-size:80%;"}
 
 <!-- ######################################### -->
 
@@ -965,11 +1106,15 @@ This approach applies several sequential methods, each with different purposes [
 
 <!-- ######################################### -->
 
+# 6.1 Future research directions
+
 ---
 
 ## 6.1 Future research directions {style="font-size:80%;"}
 
 <!-- ######################################### -->
+
+# 6.2 Study limitations
 
 ---
 
