--- a/references.bib
+++ b/references.bib
@@ -3651,6 +3651,16 @@ responses?},
       url={https://betanalpha.github.io/assets/case_studies/principled_bayesian_workflow.html}, 
 }
 
+@misc{Betancourt_2024,
+      title={Pairwise comparison modeling}, 
+      author={Betancourt, M.},
+      year = {2024},
+      date = {2024-09-01},
+      langid = {en},
+      note = {last accessed in 22-09-2025},
+      url={https://betanalpha.github.io/assets/chapters_html/pairwise_comparison_modeling.html}, 
+}
+
 @online{McElreath_2024b,
     author = {McElreath, R.},
     title = {The Third Edition, the Dotted Half Note of Editions},
